minor change: remove commented code